--- a/src/main/resources/templates/add-book.html
+++ b/src/main/resources/templates/add-book.html
@@ -152,7 +152,7 @@
 
                 </div>
                 <div class="ad-footer-btm">
-                    <p>Copyright © 2021.Company name All rights reserved.<a target="_blank" href="https://sc.chinaz.com/moban/">网页模板</a></p>
+                    <p>Copyright © 2023. <a target="_blank" href="https://github.com/Frak-Freud">Frak-Freud</a></p>
                 </div>
             </div>
         </div>
