--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -163,9 +163,9 @@
                     </div>
                 </div>
 
-				<div class="ad-footer-btm">
-					<p>Copyright &copy; 2021.Company name All rights reserved.<a target="_blank" href="https://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
-				</div>    
+                <div class="ad-footer-btm">
+                    <p>Copyright © 2023. <a target="_blank" href="https://github.com/Frak-Freud">Frak-Freud</a></p>
+                </div>
 			</div>    
 		</div>    
 	</div>    
